Addition of technical blog/wireframes site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<html><body>Hello DBC!</body></html>
+
+<html>
+<head>
+	<title>DBC Personal Site</title>
+	<link rel="stylesheet" type="text/css" href="unit1_projects/stylesheets/dbcblog_styling.css">
+</head>
+<body>
+
+	Hello DBC!
+
+<div id="links">
+links:<br>
+<a href="/unit1_projects/week1_technical_blog.html">Technical Blog</a>  <br>
+<a href="">Cultural Blog</a>
+
+
+</div>
+</body>
+</html>
