--- a/unit1_projects/dbc2.html
+++ b/unit1_projects/dbc2.html
@@ -4,6 +4,7 @@
 	<title>Second Project Page: Choice words </title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/dbc2.css">
 </head>
+<body>
 <div id="header">
 	Dylan Krause 
 	<p id="intro"><span class='one let'><a href="">I</a></span>
@@ -51,4 +52,5 @@
 <div id="footer">
 <p>Follow these thoughts deeper...For instance, check out what a collection of books with <a href="https://www.goodreads.com/list/show/3056.White_as_the_Driven_Snow">White</a> covers has to offer.</p>
 </div>
+</body>
 </html>
