Updated Wireframe sites

--- a/unit1_projects/blog_template.html
+++ b/unit1_projects/blog_template.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="header">Dylan Krause: 
 		<div id="sub_header">
-			<a href="">Main</a><br>
+			<a href="http://krauzer.github.io">Main</a><br>
 			<a href="">Technical Blog</a>
 			<a href="">Cultural Blog</a>
 		</div>
@@ -18,10 +18,10 @@
 		<div id="content">
 			<!--Content center-left-->
 			<div id="content_title">
-
+				<span id="date"><!--Date--></span>
 			</div>
 			<div id="content_objectives">
-				
+
 			</div>
 			<div id="content_text">
 
@@ -35,7 +35,7 @@
 		</div>
 		<div id="footer">
 			<!--Footer bottom-->
-
+			DBC Red-Spotted Newts ~ contact <a href="mailto:dykrause@gmail.com">me</a>
 		</div>
 	</div>
 </body>
