--- a/unit1_projects/week1_technical_blog.html
+++ b/unit1_projects/week1_technical_blog.html
@@ -9,7 +9,7 @@
 	<div id="header">Dylan Krause: Technical Blog
 		<div id="sub_header">
 			<a href="http://krauzer.github.io">Main</a><br>
-			<a href="">Cultural Blog</a>
+			<a href="week1_cultural_blog.html">Cultural Blog</a>
 		</div>
 	</div>
 	<!--Wrap content to center it on page-->
@@ -24,7 +24,7 @@
 			</div>
 			<div id="content_text">
 			<h5><a href="http://phys.org" target="_blank">Phys.org</a></h5>
-			<p> <em>Phys.org</em> is a science news site that I found via Reddit. It covers news on science and technology, reported through fields like biology or physics, with an emphasis on detailing research. It's very focused and informative. Perhaps, it can be considered serious, niche, and practical. But the appeal of it is in its no frills approach. If I want to browse science news, I look no further than phys.org. There's almost nothing extraneous you to wade through. </p>
+			<p> <i>Phys.org</i> is a science news site that I found via Reddit. It covers news on science and technology, reported through fields like biology or physics, with an emphasis on detailing research. It's very focused and informative. Perhaps, it can be considered serious, niche, and practical. But the appeal of it is in its no frills approach. If I want to browse science news, I look no further than phys.org. There's almost nothing extraneous you to wade through. </p>
 
 			<p>Arriving on the home page puts you into view of about seven stories split into two sections. But easily moving through subsections is the positive here. Stories from nine science fields and those aggregated by popularity, comments, date, rank, inclusion of video, etc are all easily navigated to via headers. The eye is drawn to the banner but that is almost a byproduct of how inconspicous the rest of the page is. It's just information and a couple of thumbnails.</p>
 
