--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <div id="links">
 links:<br>
 <a href="/unit1_projects/week1_technical_blog.html">Technical Blog</a>  <br>
-<a href="">Cultural Blog</a>
-
+<a href="week1_cultural_blog.html">Cultural Blog</a>
+<a href="wireframe_sites.html"></a>
 
 </div>
 </body>
