--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <div id="links">
 links:<br>
-<a href="/unit1_projects/week1_technical_blog.html">Technical Blog</a>  <br>
-<a href="week1_cultural_blog.html">Cultural Blog</a>
-<a href="wireframe_sites.html"></a>
+<a href="unit1_projects/week1_technical_blog.html">Technical Blog</a>  <br>
+<a href="unit1_projects/week1_cultural_blog.html">Cultural Blog</a>
+<a href="wireframe_sites.html">Wireframe Comparisons</a>
 
 </div>
 </body>
