--- a/unit1_projects/week1_cultural_blog.html
+++ b/unit1_projects/week1_cultural_blog.html
@@ -22,6 +22,7 @@
 			<div id="content_objectives">
 				<i>When you think of the times in your life where you've been the happiest, the proudest, or the most satisfied, what values come to mind?</i>
 			</div>
+			<br>
 			<div id="content_text">
 				<span class="value">Achievement</span>
 				<span class="value">Accountability</span>
@@ -56,13 +57,31 @@
 				<p>
 					It is through <em>Introspection</em> that I'm able to place myself in the context of the world. Many of the other values are important but introspection is what strengthens them. For me, it provides a better understanding of things. It helps with the most difficult situations I've faced and has made the enjoyable ones even more worthwhile.  
 				</p>
+				<br>
+				<br>
+				<p><i>The personal importance of living up to these values:</i><br>
+					<br>
+					<strong>Extremely Important (5):</strong> Accountability, Commitment, Compassion, Creativity, Health, Helping Other People, Honesty, Integrity, Introspection, Personal Development, Self-Respect
+					<br>
+					<br>
+					<strong>Very Important (4):</strong> Achievement, Affection, Autonomy, Close Relationships, Community, Confidence, Environmentalism, Fairness, Friendships 
+					<br>
+					<br>
+					<strong>Important (3):</strong> Adventure, Challenge, Cooperation, Economic Security, Having a Family, Insight, Nature, Self-Reliance
+					<br>
+					<br>
+					<strong>Slightly Importnat (2): </strong>Meaningful Work
+					<br>
+					<br>
+					<strong>Not very important (1):</strong><br>
+				</p>
 				<p>
 
 					<i>What was the last topic that someone asked for your advice on?:</i> <br>
 					How to better socialize in a new city. I'm not the best socializer myself, so I've thought out the overwhelming number of hardships the task presents. 
 				</p>
 
-				<p></p>
+
 
 			</div>
 			<div>
