minor change to template

--- a/unit1_projects/blog_template.html
+++ b/unit1_projects/blog_template.html
@@ -9,7 +9,7 @@
 	<div id="header">Dylan Krause: 
 		<div id="sub_header">
 			<a href="http://krauzer.github.io">Main</a><br>
-			<a href="">Technical Blog</a>
+			<a href="">Technical Blog</a><br>
 			<a href="">Cultural Blog</a>
 		</div>
 	</div>
