--- a/index.html
+++ b/index.html
@@ -3,17 +3,53 @@
 <html>
 <head>
 	<title>DBC Personal Site</title>
-	<link rel="stylesheet" type="text/css" href="unit1_projects/stylesheets/dbcblog_styling.css">
+	<link rel="stylesheet" type="text/css" href="unit1_projects/stylesheets/reset.css">
+	<link href='http://fonts.googleapis.com/css?family=Patrick+Hand|PT+Serif|Rokkitt' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="unit1_projects/stylesheets/indexcss.css">
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
 </head>
 <body>
 
-	Hello DBC!
+	<!--Header with simple Nav-->
+	<header>Dylan Krause: DBC Coder 
+		<nav>
+			<a href="unit1_projects/week1_technical_blog.html">Technical Blog</a><br>
+			<a href="unit1_projects/week1_cultural_blog.html">Cultural Blog</a>
+		</nav>
+	</header>
+<!--Main simplified Section to buld around-->
+	<div id="core_wrapper">
+			<!--Split Screen left-->
+	<div id="left_slide"></div>
+	<section>
+		<span>Current Projects:</span><br>
+		<div class="pane" id="pane_one">
+			<a href="" id="ruby_link">ruby</a>
+			<a href="" id="js_link">JS</a>
+			<a href="unit1_projects/my_wireframe.html"id="design_link">Design</a>
+		</div>
+		<div class="pane" id="pane_two">
+		</div>
+		<div class="pane" id="pane_three"></div>
+		<div class="pane" id="pane_four">
+		<a href=""id="design_link">Design</a>
+		</div>
+		<div class="knob"></div>
+	<!--<a href="unit1_projects/wireframe_sites.html">Wireframe Comparisons</a>-->
+	</section>
+		<!--Split Screen right-->
+	<div id="right_slide"></div>
+	</div>
 
-<div id="links">
-links:<br>
-<a href="unit1_projects/week1_technical_blog.html">Technical Blog</a>  <br>
-<a href="unit1_projects/week1_cultural_blog.html">Cultural Blog</a> <br>
-<a href="unit1_projects/wireframe_sites.html">Wireframe Comparisons</a>
+
+
+<!--Footer-->
+<footer>
+DBC Red-Spotted Newts ~ contact <a href="mailto:dykrause@gmail.com">me</a>
+</footer>
+
+
 
 </div>
 </body>
