--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="pane" id="pane_three"></div>
 		<div class="pane" id="pane_four">
-		<a href=""id="design_link">Design</a>
+		<a href="unit1_projects/my_wireframe.html"id="design_link">Design</a>
 		</div>
 		<div class="knob"></div>
 	<!--<a href="unit1_projects/wireframe_sites.html">Wireframe Comparisons</a>-->
