week 2 technical blog update

--- a/unit1_projects/week1_cultural_blog.html
+++ b/unit1_projects/week1_cultural_blog.html
@@ -9,7 +9,7 @@
 	<div id="header">Dylan Krause: Cultural Blog
 		<div id="sub_header">
 			<a href="http://krauzer.github.io">Main</a><br>
-			<a href="week1_technical_blog.html">Technical Blog</a>
+			<a href="week2_technical.html">Technical Blog</a>
 		</div>
 	</div>
 	<!--Wrap content to center it on page-->
