--- a/unit1_projects/week1_cultural_blog.html
+++ b/unit1_projects/week1_cultural_blog.html
@@ -70,7 +70,7 @@
 					<strong>Important (3):</strong> Adventure, Challenge, Cooperation, Economic Security, Having a Family, Insight, Nature, Self-Reliance
 					<br>
 					<br>
-					<strong>Slightly Importnat (2): </strong>Meaningful Work
+					<strong>Slightly Important (2): </strong>Meaningful Work
 					<br>
 					<br>
 					<strong>Not very important (1):</strong><br>
