Week 3 Blogs and Blog Updates

--- a/unit1_projects/blog_template.html
+++ b/unit1_projects/blog_template.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Blog Template</title>
+	<title>Dylan Krause: </title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/dbcblog_styling.css">
 </head>
 <body>
@@ -15,6 +15,10 @@
 	</div>
 	<!--Wrap content to center it on page-->
 	<div id="wrapper">
+		<div id="nav">
+			<!--Move to different blog posts-->
+			<a id="prev" href="">Prev</a><a id="next" href="">Next</a>
+		</div>
 		<div id="content">
 			<!--Content center-left-->
 			<div id="content_title">
@@ -30,8 +34,9 @@
 
 			</div>
 		</div>
-		<div id="sidebar">
-			<!--Sidebar right-->
+		<div id="nav">
+			<!--Move to different blog posts-->
+			<a id="prev" href="">Prev</a><a id="next" href="">Next</a>
 		</div>
 		<div id="footer">
 			<!--Footer bottom-->
