--- a/unit1_projects/week1_technical_blog.html
+++ b/unit1_projects/week1_technical_blog.html
@@ -9,11 +9,15 @@
 	<div id="header">Dylan Krause: Technical Blog
 		<div id="sub_header">
 			<a href="http://krauzer.github.io">Main</a><br>
-			<a href="week1_cultural_blog.html">Cultural Blog</a>
+			<a href="week3_cultural_blog.html">Cultural Blog</a>
 		</div>
 	</div>
 	<!--Wrap content to center it on page-->
 	<div id="wrapper">
+		<div id="nav">
+			<!--Move to different blog posts-->
+			<a id="prev" href=""></a><a id="next" href="week2_technical.html">Next</a>
+		</div>
 		<div id="content">
 			<!--Content center-left-->
 			<div id="content_title">
@@ -66,8 +70,9 @@
 
 			</div>
 		</div>
-		<div id="sidebar">
-			<!--Sidebar right-->
+	<div id="nav">
+			<!--Move to different blog posts-->
+			<a id="prev" href=""></a><a id="next" href="week2_technical.html">Next</a>
 		</div>
 		<div id="footer">
 			<!--Footer bottom-->
