--- a/unit1_projects/week2_technical.html
+++ b/unit1_projects/week2_technical.html
@@ -2,18 +2,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Technical Blog: Class vs. Id</title>
+	<title>Dylan Krause: Technical Blog</title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/dbcblog_styling.css">
 </head>
 <body>
 	<div id="header">Dylan Krause: Technical Blog
 		<div id="sub_header">
 			<a href="http://krauzer.github.io">Main</a><br>
-			<a href="week1_cultural_blog.html">Cultural Blog</a>
+			<a href="week3_cultural_blog.html">Cultural Blog</a>
 		</div>
 	</div>
 	<!--Wrap content to center it on page-->
 	<div id="wrapper">
+		<div id="nav">
+			<!--Move to different blog posts-->
+			<a id="prev" href="week1_technical_blog.html">Prev</a><a id="next" href="week3_technical.html">Next</a>
+		</div>
 		<div id="content">
 			<!--Content center-left-->
 			<div id="content_title">
@@ -60,17 +64,15 @@
 				<img src="images/css_selectivity.png">
 				<br>
 				<br>
-				<p>
-				<a href="week1_technical_blog.html">Prior Post</a>
-			</p>
 				<br>
 			</div>
 			<div>
 
 			</div>
 		</div>
-		<div id="sidebar">
-			<!--Sidebar right-->
+		<div id="nav">
+			<!--Move to different blog posts-->
+			<a id="prev" href="week1_technical_blog.html">Prev</a><a id="next" href="week3_technical.html">Next</a>
 		</div>
 		<div id="footer">
 			<!--Footer bottom-->
