--- a/unit1_projects/week1_cultural_blog.html
+++ b/unit1_projects/week1_cultural_blog.html
@@ -9,11 +9,15 @@
 	<div id="header">Dylan Krause: Cultural Blog
 		<div id="sub_header">
 			<a href="http://krauzer.github.io">Main</a><br>
-			<a href="week2_technical.html">Technical Blog</a>
+			<a href="week3_technical.html">Technical Blog</a>
 		</div>
 	</div>
 	<!--Wrap content to center it on page-->
 	<div id="wrapper">
+		<div id="nav">
+			<!--Move to different blog posts-->
+			<a id="prev" href=""></a><a id="next" href="week3_cultural_blog.html">Next</a>
+		</div>
 		<div id="content">
 			<!--Content center-left-->
 			<div id="content_title">
@@ -88,10 +92,10 @@
 
 			</div>
 		</div>
-		<div id="sidebar">
-			<!--Sidebar right-->
-		</div>
-		<div id="footer">
+		<div id="nav">
+			<!--Move to different blog posts-->
+			<a id="prev" href=""></a><a id="next" href="week3_cultural_blog.html">Next</a>
+		</div>		<div id="footer">
 			<!--Footer bottom-->
 			DBC Red-Spotted Newts ~ contact <a href="mailto:dykrause@gmail.com">me</a>
 		</div>
