--- a/unit1_projects/week3_technical.html
+++ b/unit1_projects/week3_technical.html
@@ -16,7 +16,7 @@
 	<div id="wrapper">
 		<div id="nav">
 			<!--Move to different blog posts-->
-			<a id="prev" href="week2_technical.html">Prev</a><!--<a id="next" href="">Next</a>-->
+			<a id="prev" href="week2_technical.html">Prev</a><a id="next" href="week4_technical.html">Next</a>
 		</div>
 		<div id="content">
 			<!--Content center-left-->
@@ -55,7 +55,7 @@
 		</div>
 		<div id="nav">
 			<!--Move to different blog posts-->
-			<a id="prev" href="week2_technical.html">Prev</a><!--<a id="next" href="">Next</a>-->
+			<a id="prev" href="week2_technical.html">Prev</a><a id="next" href="week4_technical.html">Next</a>
 		</div>
 		<div id="footer">
 			<!--Footer bottom-->
