--- a/unit1_projects/week3_cultural_blog.html
+++ b/unit1_projects/week3_cultural_blog.html
@@ -9,14 +9,14 @@
 	<div id="header">Dylan Krause: Cultural Blog
 		<div id="sub_header">
 			<a href="http://krauzer.github.io">Main</a><br>
-			<a href="week3_technical.html">Technical Blog</a><br>
+			<a href="week4_technical.html">Technical Blog</a><br>
 		</div>
 	</div>
 	<!--Wrap content to center it on page-->
 	<div id="wrapper">
 		<div id="nav">
 			<!--Move to different blog posts-->
-			<a id="prev" href="week1_cultural_blog.html">Prev</a><a id="next" href=""></a>
+			<a id="prev" href="week1_cultural_blog.html">Prev</a><a id="next" href="week4_cultural_blog.html">Next</a>
 		</div>
 
 		<div id="content">
@@ -66,7 +66,7 @@
 		</div>
 		<div id="nav">
 			<!--Move to different blog posts-->
-			<a id="prev" href="week1_cultural_blog.html">Prev</a><a id="next" href=""></a>
+			<a id="prev" href="week1_cultural_blog.html">Prev</a><a id="next" href="week4_cultural_blog.html">Next</a>
 		</div>		
 		<div id="footer">
 			<!--Footer bottom-->
