Week five blogs

--- a/unit1_projects/week4_cultural_blog.html
+++ b/unit1_projects/week4_cultural_blog.html
@@ -51,7 +51,7 @@
 					</p> 
 
 					<p>
-						I know it doesn't sound much like the type of conflict you think of when you hear "emotional conflict," but I believe it was a conflict that played itself out in one of the only ways it can between a patient and doctor. I've learned that doctors can be very meticulous in their interactions with patients, they know how to deal with frustration and anxiety, and they know when not to push an issue further. I know I used that and the professional relationship I had with my doctor to my advantage to avoid making a decision until I could pretend it was never was a possibility in the first place. I coasted on a very low, unspoken conflict until we moved on.  
+						I know it doesn't sound much like the type of conflict you think of when you hear "emotional conflict," but I believe it was a conflict that played itself out in one of the only ways it can between a patient and doctor. I've learned that doctors can be very meticulous in their interactions with patients, they know how to deal with frustration and anxiety, and they know when not to push an issue further. I know I used that and the professional relationship I had with my doctor to my advantage to avoid making a decision until I could pretend it was never really a possibility in the first place. I coasted on a very low, unspoken conflict until we moved on.  
 					</p>
 
 					<p>
