--- a/unit1_projects/week5_cultural.html
+++ b/unit1_projects/week5_cultural.html
@@ -9,14 +9,14 @@
 	<div id="header">Dylan Krause: Cultural Blog
 		<div id="sub_header">
 			<a href="http://krauzer.github.io">Main</a><br>
-			<a href="week5_technical.html">Technical Blog</a><br>
+			<a href="week6_technical.html">Technical Blog</a><br>
 		</div>
 	</div>
 	<!--Wrap content to center it on page-->
 	<div id="wrapper">
 		<div id="nav">
 			<!--Move to different blog posts-->
-			<a id="prev" href="">Prev</a><!--<a id="next" href="">Next</a>-->
+			<a id="prev" href="">Prev</a><a id="next" href="week6_cultural.html">Next</a>
 		</div>
 		<div id="content">
 			<!--Content center-left-->
@@ -28,14 +28,17 @@
 				Where is tech taking us?
 			</div>
 			<div id="content_text">
-				<p>The tech industry, like most industries, has its fair share of problems. No human endeavor is perfect, and I think the pitfall with tech is to paint it with a rosier brush than it deserves. Of course, the industry has provided its fair share of benefits to the people and society as a whole, but again like with all industries, I think it is important to analyze it in context of what it is, what it has to offer, and how it has not only met the expectations people have set for it, but also how much it has fulfilled its inherent potential.  </p>
 				<p>
-
-The complaint made here is a broad one, not because any one specific problem doesn’t deserve focus but because perhaps a better mindset might contribute a little to solving all of them. 
-
+					The tech industry, like most industries, has its fair share of problems. No human endeavor is perfect, and I think the pitfall with tech is to paint it with a rosier brush than it deserves. Of course, the industry has provided benefits to people and society as a whole, but again as with all industries, it is important to analyze tech in context of what it is, what it has to offer, and how it has not only met the expectations people have set for it, but also how much it has fulfilled its inherent potential. 
 				</p>
 				<p>
-					To put it simply, sometimes I wonder whether the tech industry has just followed the path of least resistance. You look at some of the biggest things they have offered, and you must question: have they been the easiest to produce? Opening discussion. Connecting people.  Providing information. All monumental achievements but were they achievements because the creative minds of tech dug deep and pushed ahead to a new frontier or were they just our natural tendencies unfolding like a piece of paper? 
+					To put it simply, I believe much of the tech industry has just followed the path of least resistance. Looking at some of the biggest things tech has offered, one question you could ask is have they been the easiest to produce? Tech has been great for opening discussion, connecting people, providing information. All monumental achievements, but did they come about because the creative minds of tech dug deep and pushed ahead to a new frontier or were they just our natural tendencies unfolding like a piece of paper? 
+				</p>
+				<p>
+					I ask this question because it seems like in a lot of areas there hasn't been much improvement. When you look at the fundamentals of information, for instance, you can see how much of it hasn't changed since the early days of tech. We have wikis, forums, and blogs. Yes, part of the reason for that is because they work. But we also must remember, they worked fifteen years ago! Isn't there something else tech can provide? I recently finished reading <em> The Emperor of All Maladies </em> a biography of cancer, and an apt analogy to development is the treatment of cancer using surgery. Cancer has been treated with surgery since the disease was first recognized and it is still an effective treatment today, but in many ways is has been the path of least resistance and because of that, it has been indulged to the point of ineffectiveness at times. Only recently have we embarked on much more complex but much more possibly effective treatments like gene therapy. If we want to tackle problems, we have to consider the complex. 
+				</p>
+				<p>
+					I do not use the analogy between development and cancer treatment lightly. Even the layman's tech world has made a bold claim about what it can offer the sick. Tech itself, not just developments in high, professional technologies for doctors or researchers, can be a major help to the ill. But what has it offered? From my own lay perspective, I can only really think of those basics: forums, wiki pages, blog posts, and articles! It's still frustratingly hard for a layperson to learn about some basic research or advancements. How many people are left to google about their illnesses because there is no other option for them? How many actually integrate tech into their lives with regard to their illnesses? How many can say tech has helped them get better or helped with the mental strain of being ill? What resources do they have to log their symptoms in order to keep up with their health? Development in this one field has been slow and basic. And the same has happened in numerous other important areas. When tech is rapidly growing and changing in fields like social networking, there is no excuse. Industries that doesn't reach a large user base or turn a quick profit have been ignored by the tech world. They've had to rely on open sourcing or community support. I think things are changing but slowly. Hopefully we can get a better grasp on the situation and move forward. Progress always comes about even if slowly.  It must. 
 				</p>
 
 			</div>
@@ -45,7 +48,7 @@ The complaint made here is a broad one, not because any one specific problem doe
 		</div>
 		<div id="nav">
 			<!--Move to different blog posts-->
-			<a id="prev" href="">Prev</a><!--<a id="next" href="">Next</a>-->
+			<a id="prev" href="">Prev</a><a id="next" href="week6_cultural.html">Next</a>
 		</div>
 		<div id="footer">
 			<!--Footer bottom-->
