--- a/unit1_projects/week6_technical.html
+++ b/unit1_projects/week6_technical.html
@@ -2,27 +2,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dylan Krause: </title>
+	<title>Dylan Krause: Technical Blog </title>
 	<link rel="stylesheet" type="text/css" href="stylesheets/dbcblog_styling.css">
 </head>
 <body>
-	<div id="header">Dylan Krause: 
+	<div id="header">Dylan Krause: Technical Blog
 		<div id="sub_header">
 			<a href="http://krauzer.github.io">Main</a><br>
-			<a href="">Technical Blog</a><br>
-			<a href="">Cultural Blog</a>
+			<a href="week6_cultural.html">Cultural Blog</a><br>
 		</div>
 	</div>
 	<!--Wrap content to center it on page-->
 	<div id="wrapper">
 		<div id="nav">
 			<!--Move to different blog posts-->
-			<a id="prev" href="">Prev</a><!--<a id="next" href="">Next</a>-->
+			<a id="prev" href="week5_technical.html">Prev</a><!--<a id="next" href="">Next</a>-->
 		</div>
 		<div id="content">
 			<!--Content center-left-->
 			<div id="content_title">
-				<span id="date"><!--Date--></span>
+				Stereotype Threats 
+				<span id="date">June 1, 2014</span>
 			</div>
 			<div id="content_objectives">
 
