--- a/unit1_projects/week6_cultural.html
+++ b/unit1_projects/week6_cultural.html
@@ -21,12 +21,55 @@
 		<div id="content">
 			<!--Content center-left-->
 			<div id="content_title">
+				Stereotype Threats and the Environments that Shape Them
 				<span id="date">June 1, 2014</span>
 			</div>
 			<div id="content_objectives">
-
 			</div>
 			<div id="content_text">
+				<p>
+					Stereotype threat is the experience of conforming to stereotypes in real world situations when the awareness of said stereotypes is enhanced or emphasized. It seems usually to be used in the context of negative stereotypes during situations such as testing, performance, and academic pursuits where pressure and anxiety are more likely to be possible. Claude Steele and Joshua Aronson, social psychologists, brought the idea to the empirical forefront in 1995 with an experiment that showed performance by African American students on tests improved when the tests were not described as a diagnostic of intellectual ability. The implication derived is that the anxiety stemming from stereotypes of African Americans negatively affected their performance. Since then, there have been other empirical studies supporting this conclusion more generally. 
+				</p>
+				<p>
+					I'm no social psychologist, nor am I well versed enough in the studies or science to engage in a substantive debate, but I do believe the current empirical conclusions, at the very, least can provide insight as to what direction we should take when it comes to creating fairer and more suitable performance and testing conditions. It can help us measure how well those conditions are working, and it can help us as individuals be more considerate and thoughtful when interacting with others.  Stereotype threat seems to extend beyond one race and should be considered in the context of gender, race, sexual orientation, age, religious affiliation, or, really, any aspect of a person's identity that may be susceptible to stereotyping. 
+				</p>
+				<p>
+					I believe everybody is biased and carries prejudices. The biggest prejudices, in my opinion, are the ones that are easiest to form, the ones that come from othering. And as such, they are most prominent against people not like us, people of different races and gender and ages, people from cultures we consider hostile to ours. I've thought a lot about this because I've been dealing with different cultures in my own family since I was little, and I think biases can be so strong and prevalent, that they can form even against or towards oneself. So, I do believe in stereotype threats since they're so closely linked to self-doubt and anxieties about expectation or even personhood. But I think it's funny how the idea is primarily viewed in a negative context. 
+				</p>
+				<p>
+					The question is, how has stereotype threat affected me. When hearing that question, I think most people would wonder how have they been negatively affected by it. I think it's unfortunate that like many things, these <em>threats</em> inevitability fall into the realm of minority experience, as if the blight of stereotype is just another problem you only have to worry about when dealing with marginalized groups. As if its just another stain that those groups bring to the world. 
+				</p>
+				<p>
+					I remember listening to a Bill Moyers interview with Junot Diaz, and I recall Diaz saying something to the tune that, and I'm paraphrasing because I forgot the exact line, the more elite, white classes in the Dominican Republic will tell you race doesn't exist in that country, not like in the US. I think it's the same in Puerto Rico. When you pretend everyone is not bound by some traditional definition of racism, it's easier to ignore and use diversionary tactics. It's easier to pretend everything is peachy. Part of what privilege does is to cloak itself in silence. I recall this because it sounds awfully similar to this idea of <em>threats</em>. If we limit these discussions to pockets of experience where we consider them prevalent, we cloak the more general problem in which the privileged classes in American society participate. We hide their inherent prejudice and only start dealing with it when somebody declares it problematic. And who makes the declarations in this country? The privileged classes. 
+				</p>
+				<p>
+					I've thought about these things a lot over the years because I'm of mixed ethnicity, Puerto Rican and (mostly) eastern European, and my personal cultural life has never really been rigidly set. When people lament the “browning” of America thanks to the influx of Hispanics, I like to imagine they're thinking of people like me, a person with ancestry from almost all parts of the world that has turned out looking ambiguously like someone from the Mediterranean. 	
+				</p>
+				<p>
+					And, for me, I believe this ethnicity of mine has come significantly into play when it comes to stereotyping, but in quite the opposite capacity usually thought of with stereotype threats. As a straight male, still in his twenties, born from various ethnicities with a German last name, who has been privileged to move in out of diverse, successful communities, I have never felt beholden to any one particular negative stereotype. Nor have I ever really felt any stereotype pressure from anyone else. Many times, even, I've found people assume I'm of some nationality or ethnicity familiar to them. I've always found it funny how people will approach or interact with you via recognition of your identity. 
+				</p>
+				<p>
+					The complexity of social situations is defined by interactions that develop this way, where people look for a reason to feel more comfortable or hesitant around you. Naturally, one of the ways to do this is form some positive bias or negative bias and reinforce it. I think such behavior is unconscious for many and more prevalent than people think. And it seems natural that stereotype threats would stem from this because people inevitably hedge their behavior based on the expectations of the person they're dealing with. 
+				</p>
+				<p>
+					Step one in combating negative stereotypes is some sort of recognition of how we behave and consider each other, more generally. Like many other things, a person needs awareness, humility, and the ability to reason about their emotions and actions. 
+				</p>
+				<p>
+
+					But abstract solutions sometimes aren't that effective, and when we're talking about specific interactions there are definitely things that can be done. I look at stereotyping in terms of the power structure, where the stereotypes with the most power are the ones being put forth from the dominant presence in the room. So step one for the individual is to consider the situation you're in. 
+				</p>
+				<p>
+					Am I in some position of authority? Am I expressing my opinion in an oppressive manner, silencing those others in the room? Am I stepping out of bounds? Was this a space not meant for me? Am I creating an environment where my prejudice would influence others? Are people looking to me for advice, instruction, or opinion? 
+				</p>
+				<p>
+					These are the times you have to be most careful and considerate. And the same could be said of more professional situations. In a testing environment, the culture around the test can have the most influence. The perceptions shape the biases. Who is shaping those perceptions and what is influencing their thought process? This is why classrooms can often get the most hostile. People walk into the room thinking their opinions are valuable, but they don't consider their behavior in any other context. They assume some position of authority; that they're there to be heard. They fail to consider that they might be building up their position in the room via some personal bias in favor of themselves, playing off stereotypes in their favor.  These are things I always try to be aware of personally, and I hope others do so too.  
+				</p>
+				<p>
+					Basically, I think it's important to think about not just how you act but also about how situations and environments unfold around you.  
+				</p>
+
+
+
 
 			</div>
 			<div>
