--- a/unit1_projects/week5_cultural.html
+++ b/unit1_projects/week5_cultural.html
@@ -16,7 +16,7 @@
 	<div id="wrapper">
 		<div id="nav">
 			<!--Move to different blog posts-->
-			<a id="prev" href="">Prev</a><a id="next" href="week6_cultural.html">Next</a>
+			<a id="prev" href="week4_cultural_blog.html">Prev</a><a id="next" href="week6_cultural.html">Next</a>
 		</div>
 		<div id="content">
 			<!--Content center-left-->
@@ -48,7 +48,7 @@
 		</div>
 		<div id="nav">
 			<!--Move to different blog posts-->
-			<a id="prev" href="">Prev</a><a id="next" href="week6_cultural.html">Next</a>
+			<a id="prev" href="week4_cultural_blog.html">Prev</a><a id="next" href="week6_cultural.html">Next</a>
 		</div>
 		<div id="footer">
 			<!--Footer bottom-->
