--- a/unit1_projects/week6_cultural.html
+++ b/unit1_projects/week6_cultural.html
@@ -9,14 +9,14 @@
 	<div id="header">Dylan Krause: Cultural Blog
 		<div id="sub_header">
 			<a href="http://krauzer.github.io">Main</a><br>
-			<a href="week6_technical.html">Technical Blog</a><br>
+			<a href="week7_technical.html">Technical Blog</a><br>
 		</div>
 	</div>
 	<!--Wrap content to center it on page-->
 	<div id="wrapper">
 		<div id="nav">
 			<!--Move to different blog posts-->
-			<a id="prev" href="week5_cultural.html">Prev</a><!--<a id="next" href="">Next</a>-->
+			<a id="prev" href="week5_cultural.html">Prev</a><a id="next" href="week7_cultural.html">Next</a>
 		</div>
 		<div id="content">
 			<!--Content center-left-->
@@ -78,7 +78,7 @@
 		</div>
 		<div id="nav">
 			<!--Move to different blog posts-->
-			<a id="prev" href="week5_cultural.html">Prev</a><!--<a id="next" href="">Next</a>-->
+			<a id="prev" href="week5_cultural.html">Prev</a><<a id="next" href="week7_cultural.html">Next</a>
 		</div>
 		<div id="footer">
 			<!--Footer bottom-->
