inserted missing title

--- a/unit1_projects/week7_technical.html
+++ b/unit1_projects/week7_technical.html
@@ -21,6 +21,7 @@
 		<div id="content">
 			<!--Content center-left-->
 			<div id="content_title">
+				SQL Injections
 				<span id="date">June 8, 2014</span>
 			</div>
 			<div id="content_objectives">
